--- a/Example/CalendarDateRangePickerViewController/Base.lproj/Main.storyboard
+++ b/Example/CalendarDateRangePickerViewController/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ntg-n2-LsF">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ntg-n2-LsF">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -38,40 +37,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Date Range Selected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfn-g5-Se9">
-                                <rect key="frame" x="16" y="98" width="343" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="16" y="78" width="343" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="DHb-26-l2F"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMc-dB-akE">
-                                <rect key="frame" x="87" y="142.5" width="200" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMc-dB-akE">
+                                <rect key="frame" x="124" y="122.5" width="127" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="bwo-ra-spM"/>
-                                    <constraint firstAttribute="width" constant="200" id="eLw-Y6-mjC"/>
                                 </constraints>
                                 <state key="normal" title="Select Date Range"/>
                                 <connections>
                                     <action selector="didTapButton:" destination="Pkg-6j-FeT" eventType="touchUpInside" id="piK-su-woZ"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAL-dz-8Hp">
+                                <rect key="frame" x="0.0" y="172.5" width="375" height="494.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cMc-dB-akE" firstAttribute="top" secondItem="Gfn-g5-Se9" secondAttribute="bottom" constant="27.5" id="Aev-oI-fnj"/>
+                            <constraint firstAttribute="trailing" secondItem="EAL-dz-8Hp" secondAttribute="trailing" id="IjU-Qg-DU3"/>
                             <constraint firstItem="Gfn-g5-Se9" firstAttribute="leading" secondItem="ii6-EO-KDQ" secondAttribute="leading" constant="16" id="SLt-gD-ju7"/>
+                            <constraint firstItem="EAL-dz-8Hp" firstAttribute="leading" secondItem="ii6-EO-KDQ" secondAttribute="leading" id="SMZ-pr-ked"/>
                             <constraint firstAttribute="trailing" secondItem="Gfn-g5-Se9" secondAttribute="trailing" constant="16" id="YFS-TN-dXj"/>
                             <constraint firstItem="cMc-dB-akE" firstAttribute="centerX" secondItem="ii6-EO-KDQ" secondAttribute="centerX" id="Ywl-ov-KAv"/>
+                            <constraint firstItem="EAL-dz-8Hp" firstAttribute="top" secondItem="cMc-dB-akE" secondAttribute="bottom" constant="20" id="byc-qA-k30"/>
                             <constraint firstItem="Gfn-g5-Se9" firstAttribute="top" secondItem="gTF-As-GNw" secondAttribute="bottom" constant="34" id="hAB-7s-xYe"/>
+                            <constraint firstItem="EAL-dz-8Hp" firstAttribute="bottom" secondItem="ii6-EO-KDQ" secondAttribute="bottomMargin" id="pwM-Uf-2fr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jrs-WK-vAT"/>
                     <connections>
+                        <outlet property="containerView" destination="EAL-dz-8Hp" id="WH9-9J-M6a"/>
                         <outlet property="label" destination="Gfn-g5-Se9" id="cOO-Ws-3DD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dij-sB-5J1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="280.80000000000001" y="26.53673163418291"/>
+            <point key="canvasLocation" x="477.60000000000002" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
